[MOD] change module => module_name

--- a/static/src/js/vue/src/package.json
+++ b/static/src/js/vue/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{name_project}}",
+  "name": "{{module_name}}",
   "version": "1.0.0",
   "description": "{{description}}",
   "main": "main.js",
