[MOD] update main to package.json

--- a/static/src/js/vue/package.json
+++ b/static/src/js/vue/package.json
@@ -2,7 +2,7 @@
   "name": "{{module_name}}",
   "version": "1.0.0",
   "description": "{{description}}",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
