--- a/static/src/js/vue/package.json
+++ b/static/src/js/vue/package.json
@@ -29,7 +29,9 @@
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
     "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-vue": "^0.2.8"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
