[ADD]Agregue la rama para trabajar con vuetify y este sera el template de odoo10 con vuetify

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ out
 gen
 .idea/inspectionProfiles/
 .idea/modules.xml
+.idea/vcs.xml
 .idea/vudoo-templates.iml
 .idea/workspace.xml
-./nodel_module
