--- a/static/src/js/vue/package.json
+++ b/static/src/js/vue/package.json
@@ -30,8 +30,7 @@
     "vuex": "^3.0.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
-    "semantic-ui-css": "^2.3.1",
-    "semantic-ui-vue": "^0.2.8"
+    "vuetify": "^1.0.17"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
