--- a/static/src/js/vue/package.json
+++ b/static/src/js/vue/package.json
@@ -35,7 +35,7 @@
     "vue-template-compiler": "^2.5.16",
     "file-loader": "^1.1.11",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13"
   }
