--- a/static/src/js/vue/package.json
+++ b/static/src/js/vue/package.json
@@ -36,6 +36,6 @@
 		"vue-style-loader": "^4.1.0",
 		"vue-template-compiler": "^2.5.16",
 		"webpack": "^4.3.0",
-		"webpack-cli": "^2.0.13",
+		"webpack-cli": "^2.0.13"
 	}
 }
