--- a/static/src/js/vue/package.json
+++ b/static/src/js/vue/package.json
@@ -30,7 +30,8 @@
     "vuex": "^3.0.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
-    "vuetify": "^1.0.17"
+    "vuetify": "^1.0.17",
+    "odoo-webkit": "^1.0.3"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
