--- a/static/src/js/vue/package.json
+++ b/static/src/js/vue/package.json
@@ -31,7 +31,11 @@
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
     "vuetify": "^1.0.17",
-    "odoo-webkit": "^1.0.3"
+    "odoo-webkit": "^1.0.3",
+    "material-design-icons-iconfont": "^3.0.3",
+    "file-loader": "^1.1.11",
+    "url-loader": "^1.0.1",
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
